Pushing v68 from API ea6b4b7118e47dcf592970c629bdc533482a8f7e

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -4407,6 +4407,7 @@ components:
         - object
         - id
         - name
+        - description
         - created_at
         - updated_at
       title: Group
