Pushing v69 from API e4ad83f6f6fc17d060fdcb826c9de93a743fdfc6

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -4471,7 +4471,7 @@ components:
         unit:
           type: string
           description: Unit that the measurement is reported in.
-          example: lb
+          example: kg
         type:
           type: string
           enum:
@@ -4481,7 +4481,7 @@ components:
             - heart_rate
             - systolic_blood_pressure
           description: The type of the measurement
-          example: blood_pressure
+          example: body_weight
         items:
           type: object
           additionalProperties:
