Pushing v73 from API 923a0776667e487ffa06b68b06f0acbbec74c277

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -1260,7 +1260,6 @@ paths:
                   example: Physicians
                 description:
                   type: string
-                  minLength: 1
                   maxLength: 4096
                   nullable: true
                   description: A description for this group.
@@ -1451,7 +1450,6 @@ paths:
                   example: Physicians
                 description:
                   type: string
-                  minLength: 1
                   maxLength: 4096
                   nullable: true
                   description: A description for this group.
@@ -2407,6 +2405,33 @@ paths:
               schema:
                 $ref: "#/components/schemas/member"
       x-methodName: update
+      x-belongsToResource: member
+    delete:
+      summary: Delete a Member
+      description: Deletes the specified member. Members that have meaningful objects
+        associated with them, such as tasks, threads, or files, may not be
+        deleted.
+      tags:
+        - Member
+      parameters:
+        - in: path
+          style: simple
+          explode: true
+          name: id
+          schema:
+            type: string
+            example: mem_5QW8j1oKqQjNaPk4Hv3f
+            description: Unique ID of the member.
+          required: true
+          description: Unique ID of the member.
+      responses:
+        default:
+          description: Successful response.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/member"
+      x-methodName: delete
       x-belongsToResource: member
   /v1/orders:
     post:
@@ -5013,8 +5038,8 @@ components:
           description: Always `group`.
         id:
           type: string
-          description: Unique ID for this group.
-          example: grp_QIbNbinAAJh7agaKsXrk
+          example: grp_IlGhgsstvgsagl6lV89Q
+          description: Unique ID for the Group.
         name:
           type: string
           maxLength: 255
@@ -6275,6 +6300,9 @@ components:
         - message.created
         - order.created
         - order.shipped
+        - queue.created
+        - queue.updated
+        - queue.deleted
         - task.created
         - task.updated
         - task_definition.created
