Pushing v74 from API bfb69fc51befca4ffc12d50f4bb6655d66795658

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -4810,6 +4810,8 @@ components:
           enum:
             - scale
             - blood_pressure_monitor
+            - pulse_oximeter
+            - blood_glucose_monitor
           description: Category of the device model.
           example: blood_pressure_monitor
         capabilities:
