Pushing v78 from API 1ea5a424ee5f00c976a83cb088b8bb419ad51e80

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -5658,10 +5658,13 @@ components:
         happens in your account.
 
 
-        When an interesting event occurs, we create a new Event object. For example, when a member is created, we create a member.created event; and when an measurement is received we create a measurement.created event.
+        When an interesting event occurs, we create a new Event object. For example, when a member is created, we create a `member.created` event; and when an measurement is received we create a 'measurement.created' event. The shape of the object in the `data` property of the event will be the object associated with the type of event. For example, a `member.created` event will have a data property containing the Member object.
 
 
         Note that some actions may cause multiple events to be created. For example, when a device order is fulfilled you will receive both an order.fulfilled event and a device.created event for each device sent in the order.
+
+
+        You can view more information about receiving Source events via webhooks [here](https://docs.sourcehealth.com/docs/api/webhooks/).
       x-resourceId: event
       x-package: null
     file:
@@ -7005,7 +7008,10 @@ components:
         Webhooks are our way of notifying you about new Events in your account.
 
 
-        Once a webhook is registered and enabled, each event matching the list of subscribed events will be delivered to the endpoint you choose.
+        Once a webhook is registered and enabled, each event matching the list of subscribed events will be delivered to the endpoint you choose. Your webhook will receive a copy of the [Event](https://docs.sourcehealth.com/docs/api/reference/event/) object associated with the webhook.
+
+
+        You can view more information about Source webhooks [here](https://docs.sourcehealth.com/docs/api/webhooks/).
       x-resourceId: webhook
       x-package: null
     webhook_events:
